Agregando la tarea de formularios

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>The art of learning</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css">
 	<link rel="stylesheet" href="./styles/main.css">
-	<title>Luis Ramos</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -17,24 +17,15 @@
 		<div class="collapse navbar-collapse" id="navbarColor03">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Features</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Pricing</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="./menus/tareas.html">Tareas<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" id="searchQuery" type="text" placeholder="Search">
-				<button class="btn btn-primary" type="submit" onclick="searchButton()">Search</button>
+				<input class="form-control mr-sm-2" id="searchQuery" type="text" placeholder="Buscar...">
+				<button class="btn btn-primary" type="submit" onclick="searchButton()">Buscar</button>
 			</form>
 		</div>
 	</nav>
-	<script src=".//scripts/landing.js"></script>
 </body>
+<script src=".//scripts/landing.js"></script>
 </html>
