agregando funcionalidad extra

--- a/menus/tareas.html
+++ b/menus/tareas.html
@@ -35,6 +35,7 @@
                   <h4 class="card-title">Formularios</h4>
                   <p class="card-text">Crear un formulario para calcular planillas.</p>
                   <button id="formularios" type="button" class="btn btn-primary">Ver</button>
+                  <button id="code" type="button" class="btn btn-primary">Ver código</button>
                 </div>
               </div>
         </div>
