--- a/menus/tareas.html
+++ b/menus/tareas.html
@@ -58,6 +58,10 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Apellidos" id="apellido">
                         </div>
+                        <h6 style="margin-top: 0.5rem;">Horas trabajadas</h6>
+                        <div class="form-group">
+                            <input type="number" class="form-control" id="horas" value="0">
+                        </div>
                         <h6 style="margin-top: 0.5rem;">Pago por hora</h6>
                         <div class="form-group">
                             <select class="form-control" id="pagoHora">
@@ -78,10 +82,14 @@
                                 <option value="0.3">30%</option>
                             </select>
                         </div>
+                        <h6 style="margin-top: 0.5rem;">Adicional</h6>
+                        <div class="form-group">
+                            <input type="number" class="form-control"  id="adicional" value="0">
+                        </div>
                         <h6 style="margin-top: 0.5rem;">Salario</h6>
                         <div class="form-group row">
                             <div class="col-sm-10">
-                                <input type="text" readonly="" class="form-control-plaintext" id="pagoFinal" value="0.00">
+                                <input type="text" readonly="" class="form-control-plaintext" id="pagoFinal" value="0 soles">
                             </div>
                         </div>
                     </fieldset>
